--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Cozplai</string>
+    <string name="title_activity_photo_gallery">PhotoGalleryActivity</string>
 </resources>
